--- a/views/index.edge
+++ b/views/index.edge
@@ -2,14 +2,14 @@
 
 @section('content')
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/18907.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Clean Blog</h1>
-            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+            <h1>DeeBug Blog</h1>
+            <span class="subheading">A Blog for Community of Programmers.</span>
           </div>
         </div>
       </div>
