--- a/views/post.edge
+++ b/views/post.edge
@@ -34,4 +34,70 @@
 
   <hr>
 
+
+   <!-- Main Content -->
+   <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+
+        @each(comments in comments)
+
+          <div class="post-preview">
+              <h3 class="post-subtitle">
+                {{comments.content}}
+              </h3>
+            <p class="post-meta">Posted by
+              {{comments.username}}
+            on {{comment.createdAt}}</p>
+          </div>
+          <hr>
+              
+        @endeach
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+
+
+
+
+
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <form action="/post/comment" method="POST" encType="multipart/form-data">
+          <div class="control-group">
+            <div class="form-group floating-label-form-group controls">
+              <label>Username</label>
+              <input type="text" class="form-control" placeholder="Username" name="username" >
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+      
+          <div class="control-group">
+            <div class="form-group floating-label-form-group controls">
+              <label>Post Content</label>
+              <textarea rows="5" class="form-control" placeholder="Comment" name="content"></textarea>
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+
+          
+          <div id="success"></div>
+          <div class="form-group my-4 text-centre">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+
 @endsection
